k8s/ingress-controller.yaml
# Create a dedicated namespace for the ingress controller.
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
# Deploy the NGINX Ingress controller.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  replicas: 1  # Increase the replica count for high availability.
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      serviceAccountName: ingress-nginx
      containers:
        - name: controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.8.1
          args:
            - /nginx-ingress-controller
            - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
            - --election-id=ingress-controller-leader
            - --ingress-class=nginx
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
---
# Expose the Ingress controller via a Service.
# apiVersion: v1
# kind: Service
# metadata:
#   name: ingress-nginx
#   namespace: ingress-nginx
# spec:
#   type: NodePort
#   ports:
#     - name: http
#       port: 80
#       targetPort: 80
#       nodePort: 30080
#     - name: https
#       port: 443
#       targetPort: 443
#       nodePort: 30443
#   selector:
#     app: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort  # Change to LoadBalancer if your environment supports it
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
  selector:
    app: ingress-nginx
