k8s/sqlserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-server
  labels:
    app: sql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql-server
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      containers:
        - name: sql-server
          image: mcr.microsoft.com/mssql/server:2022-CU12-ubuntu-22.04
          ports:
            - containerPort: 1433
          securityContext:
            runAsUser: 0
          volumeMounts:
            - name: mssql-data
              mountPath: /var/opt/mssql
            - name: sqlserver-data
              mountPath: /var/opt/sqlserver
      volumes:
        - name: mssql-data
          persistentVolumeClaim:
            claimName: sqlserver-mssql-pvc
        - name: sqlserver-data
          persistentVolumeClaim:
            claimName: sqlserver-sqlserver-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: sql-server
spec:
  selector:
    app: sql-server
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
