k8s/product.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: tridoann/product:v1
          ports:
            - containerPort: 80
          securityContext:
            runAsUser: 0
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Adjust if you use a different ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    # - host: product-service.example.com   # Change this host to your intended domain
    - http:
        paths:
          - path: /(prd)/(.*)
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8080
