k8s/react-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: tridoann/react-app:v1
          ports:
            - containerPort: 80
          securityContext:
            runAsUser: 0
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Adjust if you use a different ingress controller
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: react-service.example.com   # Change this host to your intended domain
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 8080
